dnl $Id$

AC_INIT()
AC_CANONICAL_SYSTEM
AM_CONFIG_HEADER(h/config.h)
AM_INIT_AUTOMAKE(brlcad, 6.0)

dnl progs
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_LIBTOOL
AM_PROG_LEX

AM_C_PROTOTYPES


CFLAGS="$CFLAGS "'-I$(top_srcdir)/h'

case "$target" in
	*-*-linux*)
		PTHREAD_LIBS="-lpthread"
		;;
	*-*-*BSD*)
		PTHREAD_LIBS="-pthread"
		;;
esac

AC_DEFINE(EXTERN_STDOUT,,[Stdout is extern])

dnl libs

dnl need curses, would prefer ncurses
SAVELIBS="${LIBS}"
LIBS=
AC_SEARCH_LIBS(initscr, ncurses curses,, AC_ERROR(Need curses!))
CURSES="${LIBS}"
LIBS="${SAVELIBS}"

SAVELIBS="${LIBS}"
LIBS=
AC_SEARCH_LIBS(getvideo, gl, AC_DEFINE(HAS_SGIGL,1, Irix GL is present.))
SGIGL="${LIBS}"
LIBS="${SAVELIBS}"

AC_SEARCH_LIBS(mallopt,malloc)
AC_SEARCH_LIBS(matherr,mx)


dnl X
X_LIBS="-L/usr/X11R6/lib -lX11 -lXi"

TCLVER=8.4
TCL=libtcl${TCLVER}
TCL_LIBS='${top_builddir}/${TCL}/${TCL}.la @DL@ @SOCKET@ -lm'
TCL_LIBRARY="$prefix/tcl${TCLVER}"
if test "$FRAMEWORK_BUILD" = "1" ; then
	dnl this may be wrong
    TCL_BUILD_CFLAGS="-DTCL_PACKAGE_PATH=\\\"$libdir/Resources/Scripts\\\" -DTCL_LIBRARY=\\\"$TCL_LIBRARY\\\""
else
    TCL_BUILD_CFLAGS="-DTCL_PACKAGE_PATH=\\\"$libdir\\\" -DTCL_LIBRARY=\\\"$TCL_LIBRARY\\\""
fi

dnl tk
TKVER="8.4"
TK_LIBS='${top_builddir}/libtk${TKVER}/libtk${TKVER}.la ${TCL_LIBS} ${X_LIBS}'
TK_LIBRARY="$prefix/tk${TKVER}"

ITCL_VERSION="3.2"
ITCL_LIBS='${top_builddir}/libitcl${ITCL_VERSION}/itcl/libitcl.la'
ITK_LIBS='${top_builddir}/libitcl${ITCL_VERSION}/itk/libitk.la'

PNG_LIBS='${top_builddir}/libpng/libpng.la ${top_builddir}/libz/libz.la'

dnl headers
AC_HEADER_STDC
AC_CHECK_HEADERS(float.h getopt.h limits.h limits.h memory.h stdarg.h stdlib.h string.h sys/ioctl_compat.h sys/machd.h sys/mman.h sys/select.h sys/socket.h sys/stat.h sys/time.h sys/types.h termcap.h termios.h time.h unistd.h varargs.h xosdefs.h)
AC_CHECK_HEADER(sys/stat.h, AC_DEFINE(HAVE_UNIX_IO,, Fix this, sys/types.h and sys/stat.h ...))
AC_CHECK_HEADER(sys/time.h, AC_DEFINE(TIME_WITH_SYS_TIME,1,sys/time.h))
AC_STRUCT_ST_BLKSIZE


dnl ============================================================
dnl union wait testing from tcl8.4's configure.in, should be revamped?
AC_MSG_CHECKING([union wait])
AC_CACHE_VAL(tcl_cv_union_wait,
    AC_TRY_LINK([#include <sys/types.h>
#include <sys/wait.h>], [
union wait x;
WIFEXITED(x);           /* Generates compiler error if WIFEXITED
                         * uses an int. */
    ], tcl_cv_union_wait=yes, tcl_cv_union_wait=no))
AC_MSG_RESULT($tcl_cv_union_wait)
if test $tcl_cv_union_wait = no; then
    AC_DEFINE(NO_UNION_WAIT,, Lacking a "union wait")
fi
dnl ============================================================


AC_DEFINE(DM_X,,[Display for X])
GL_CFLAGS="-DUSE_MESA_GL"
LEX_CFLAGS="-Dyylex=cmd_nop"
X_CFLAGS="-I/usr/X11R6/include"

dnl TODO
AC_DEFINE(HAVE_TM_ZONE,,string in time zone)

dnl typedefs
AC_CHECK_DECL(sys_errlist, AC_DEFINE(HAVE_SYS_ERRLIST_DECL,1,sys_errlist[]), AC_DEFINE(HAVE_SYS_ERRLIST_DECL,0,don't have sys_errlist[]),[# include <stdio.h>])
AC_CHECK_DECL(re_comp, AC_DEFINE(HAVE_REGEX_DECL,, BSD regular expressions))

dnl functions
AC_CHECK_FUNC(fstatfs, , [AC_DEFINE(NO_FSTATFS,, Lacking fstatfs)])
AC_CHECK_FUNC(getopt, AC_DEFINE(HAVE_GETOPT_DECL,1,getopt))
AC_CHECK_FUNC(popen, AC_DEFINE(HAVE_POPEN_DECL,1,popen))
AC_CHECK_FUNC(strdup, AC_DEFINE(HAVE_STRDUP_DECL,1,strdup))
AC_CHECK_FUNCS(dlopen, DL="" ,[AC_CHECK_LIB(dl, dlopen, DL="-ldl", AC_CHECK_LIB(dld, dlopen, DL="-ldld", AC_ERROR(No dynamic loader found)))])
AC_CHECK_FUNCS(drand gethostname vprintf sbrk vfork dlopen bzero strdup strchr getopt writev regex strdup)
AC_CHECK_FUNCS(socket, SOCKET="" ,[AC_CHECK_LIB(socket, socket, SOCKET="-lsocket", AC_ERROR(No internet socket found))])

dnl this needs to be fixed to actually test...
case "$target" in
	i386-* | i686-* | alpha-*)
		AC_DEFINE(REVERSED_IEEE,,64b floating point storage technique)
		;;
	*)
		AC_DEFINE(NATURAL_IEEE,,64b floating point storage technique)
		;;
esac
		

AC_DEFINE(USE_PROTOTYPES,1,heh)

dnl === these are things that are defined, but don't seem to be necessary on the 4 supported platforms? ===
dnl POSIX_REGEXEC
dnl CALTECH_MALLOC
dnl DRAND
dnl DLOPEN
dnl GETHOSTNAME
dnl SHELL_ESCAPE
dnl VPRINTF
dnl SBRK
dnl VFORK
dnl SBRK_DECL
dnl POPEN_DECL
dnl GETOPT_DECL
dnl REGEX_DECL
dnl XOPEN
dnl BZERO
dnl STRCHR
dnl MATHERR
dnl UNIX_DOMAIN_SOCKETS
dnl FLOAT
dnl GETOPT
dnl OFF_T
dnl WRITEV
dnl REGEX
dnl BSDGETTIMEOFDAY

BN='${top_builddir}/libbn/libbn.la ${BU}'
BU='${top_builddir}/libbu/libbu.la ${TCL_LIBS} ${PTHREAD_LIBS} -lm ${DL}'
CURSOR='${top_builddir}/libcursor/libcursor.la ${CURSES}'
DM='${top_builddir}/libdm/libdm.la ${TK_LIBS} ${RT}'
FB='${top_builddir}/libfb/libfb.la ${X_LIBS} ${PKG} ${BU}'
FFT='${top_builddir}/libfft/libfft.la -lm'
OPTICAL='${top_builddir}/liboptical/liboptical.la'
ORLE='${top_builddir}/liborle/liborle.la'
PKG='${top_builddir}/libpkg/libpkg.la'
RLE='${top_builddir}/libutahrle/libutahrle.la -lm'
RT='${top_builddir}/librt/librt.la ${BN}'
SYSV='${top_builddir}/libsysv/libsysv.la'
TERMIO='${top_builddir}/libtermio/libtermio.la'
WDB='${top_builddir}/libwdb/libwdb.la'

AC_SUBST(BN)
AC_SUBST(BU)
AC_SUBST(CURSES)
AC_SUBST(CURSOR)
AC_SUBST(DL)
AC_SUBST(DM)
AC_SUBST(FB)
AC_SUBST(FFT)
AC_SUBST(GL_CFLAGS)
AC_SUBST(ITCL_LIBS)
AC_SUBST(ITCL_VERSION)
AC_SUBST(ITK_LIBS)
AC_SUBST(LEX_CFLAGS)
AC_SUBST(OPTICAL)
AC_SUBST(ORLE)
AC_SUBST(PKG)
AC_SUBST(PNG_LIBS)
AC_SUBST(PTHREAD_LIBS)
AC_SUBST(RLE)
AC_SUBST(RT)
AC_SUBST(SGIGL)
AC_SUBST(SOCKET)
AC_SUBST(SYSV)
AC_SUBST(TCL)
AC_SUBST(TCLVER)
AC_SUBST(TCL_BUILD_CFLAGS)
AC_SUBST(TCL_LIBRARY)
AC_SUBST(TCL_LIBS)
AC_SUBST(TERMIO)
AC_SUBST(TKVER)
AC_SUBST(TK_LIBRARY)
AC_SUBST(TK_LIBS)
AC_SUBST(WDB)
AC_SUBST(X_CFLAGS)
AC_SUBST(X_LIBS)

AC_OUTPUT([
	Makefile
	anim/Makefile
	awf/Makefile
	bench/Makefile
	brlman/Makefile
	burst/Makefile
	bwish/Makefile
	comgeom-g/Makefile
	conv/Makefile
	doc/Makefile
	fb/Makefile
	fbed/Makefile
	fbserv/Makefile
	gtools/Makefile
	h/Makefile
	halftone/Makefile
	html/Makefile
	html/ReleaseNotes/Makefile
	html/ReleaseNotes/Rel5.0/Makefile
	html/ReleaseNotes/Rel5.0/Summary/Makefile
	html/ReleaseNotes/Rel6.0/Makefile
	html/manuals/Anim_Tutorial/Makefile
	html/manuals/Makefile
	html/manuals/ReleaseNotes/Makefile
	html/manuals/cadwidgets/Makefile
	html/manuals/libbu/Makefile
	html/manuals/libdm/Makefile
	html/manuals/librt/Makefile
	html/manuals/mged/Makefile
	html/manuals/mged/animmate/Makefile
	html/manuals/shaders/Makefile
	iges/Makefile
	irprep/Makefile
	iwidgets4.0.1/Makefile
	iwidgets4.0.1/doc/Makefile
	iwidgets4.0.1/generic/Makefile
	iwidgets4.0.1/iwidgets.tcl
	iwidgets4.0.1/pkgIndex.tcl
	jack/Makefile
	lgt/Makefile
	libbn/Makefile
	libbu/Makefile
	libcursor/Makefile
	libdm/Makefile
	libfb/Makefile
	libfft/Makefile
	libitcl3.2/Makefile
	libitcl3.2/itcl/Makefile
	libitcl3.2/itcl/doc/Makefile
	libitcl3.2/itcl/generic/Makefile
	libitcl3.2/itcl/library/Makefile
	libitcl3.2/itcl/unix/Makefile
	libitcl3.2/itk/Makefile
	libitcl3.2/itk/doc/Makefile
	libitcl3.2/itk/generic/Makefile
	libitcl3.2/itk/library/Makefile
	libitcl3.2/itk/unix/Makefile
	liboptical/Makefile
	liborle/Makefile
	libpkg/Makefile
	libpng/Makefile
	librt/Makefile
	libsysv/Makefile
	libtcl8.4/Makefile
	libtcl8.4/doc/Makefile
	libtcl8.4/generic/Makefile
	libtcl8.4/library/Makefile
	libtcl8.4/library/dde/Makefile
	libtcl8.4/library/encoding/Makefile
	libtcl8.4/library/http/Makefile
	libtcl8.4/library/http1.0/Makefile
	libtcl8.4/library/msgcat/Makefile
	libtcl8.4/library/opt/Makefile
	libtcl8.4/library/reg/Makefile
	libtcl8.4/library/tcltest/Makefile
	libtcl8.4/unix/Makefile
	libtcl8.4/unix/tclConfig.sh
	libtermio/Makefile
	libtk8.4/Makefile
	libtk8.4/bitmaps/Makefile
	libtk8.4/doc/Makefile
	libtk8.4/generic/Makefile
	libtk8.4/library/Makefile
	libtk8.4/library/pkgIndex.tcl
	libtk8.4/library/demos/Makefile
	libtk8.4/library/demos/images/Makefile
	libtk8.4/library/images/Makefile
	libtk8.4/library/msgs/Makefile
	libtk8.4/unix/Makefile
	libtk8.4/unix/tkConfig.sh
	libtk8.4/xlib/Makefile
	libutahrle/Makefile
	libwdb/Makefile
	libz/Makefile
	mged/Makefile
	mk/Makefile
	nirt/Makefile
	off/Makefile
	patch/Makefile
	pro-engineer/Makefile
	pro-engineer/resource/Makefile
	pro-engineer/sgi_mips4/Makefile
	pro-engineer/sgi_mips4/mk
	pro-engineer/text/Makefile
	remrt/Makefile
	rt/Makefile
	sample_applications/Makefile
	sample_applications/mk
	sh/Makefile
	sig/Makefile
	tab/Makefile
	tclscripts/Makefile
	tclscripts/geometree/Makefile
	tclscripts/lib/Makefile
	tclscripts/mged/Makefile
	tclscripts/nirt/Makefile
	tclscripts/pl-dm/Makefile
	tclscripts/rtwizard/Makefile
	tclscripts/rtwizard/examples/Makefile
	tclscripts/rtwizard/examples/PictureTypeA/Makefile
	tclscripts/rtwizard/examples/PictureTypeB/Makefile
	tclscripts/rtwizard/examples/PictureTypeC/Makefile
	tclscripts/rtwizard/examples/PictureTypeD/Makefile
	tclscripts/rtwizard/examples/PictureTypeE/Makefile
	tclscripts/rtwizard/examples/PictureTypeF/Makefile
	tclscripts/rtwizard/lib/Makefile
	tclscripts/util/Makefile
	tools/Makefile
	unigraphics/Makefile
	util/Makefile
	vas4/Makefile
	vdeck/Makefile
	vfont/Makefile
	brlcad.spec
])
